# swagger.yaml
@@ -142,7 +142,7 @@ paths:
 
       tags:
         - Users
-  /user/userId:
+  /user/get/userId:
     get:
       summary: Getting one user by id.
       parameters:
@@ -550,14 +550,10 @@ paths:
 
 
 
-
-
-
-
   ## News
   /api/news:
     get:
-      summary: barcha yangiliklar.
+      summary: All news.
       security:
         - BearerAuth: [ ]
       parameters:
@@ -588,17 +584,15 @@ paths:
           required: false
       responses:
         "200": # status code
-          description: A JSON array of user names
+          description: All news
           content:
             application/json:
               schema:
-                type: object
-                items:
-                # $ref: "#/components/schemas/topsearch"
+                $ref: "#/components/schemas/newsGet"
       tags:
         - News
     post:
-      summary: bitta yangilikni yaratish.
+      summary: Creating news.
       security:
         - BearerAuth: [ ]
       requestBody:
@@ -610,7 +604,7 @@ paths:
               $ref: "#/components/schemas/news"
       responses:
         "201": # status code
-          description: A JSON array of user names
+          description: Creating news
           content:
             application/json:
               schema:
@@ -620,7 +614,7 @@ paths:
       tags:
         - News
     put:
-      summary: bitta yangilikni tahrirlash.
+      summary: Updating news.
       security:
         - BearerAuth: [ ]
       requestBody:
@@ -773,7 +767,7 @@ paths:
   ## Page
   /api/page:
     get:
-      summary: barcha pagelar.
+      summary: All pages.
       security:
         - BearerAuth: [ ]
       parameters:
@@ -804,7 +798,7 @@ paths:
           required: false
       responses:
         "200": # status code
-          description: A JSON array of user names
+          description: All pages
           content:
             application/json:
               schema:
@@ -814,7 +808,7 @@ paths:
       tags:
         - Page
     post:
-      summary: bitta pageni yaratish.
+      summary: Creating one page.
       security:
         - BearerAuth: [ ]
       requestBody:
@@ -836,7 +830,7 @@ paths:
       tags:
         - Page
     put:
-      summary: bitta pageni tahrirlash.
+      summary: Updating pages.
       security:
         - BearerAuth: [ ]
       requestBody:
@@ -848,7 +842,7 @@ paths:
               $ref: "#/components/schemas/pageUp"
       responses:
         "201": # status code
-          description: A JSON array of user names
+          description: Updating page
           content:
             application/json:
               schema:
@@ -915,7 +909,7 @@ paths:
         - Page
   /api/page/{id}:
     get:
-      summary: bitta pageni olish.
+      summary: Getting one page.
       security:
         - BearerAuth: [ ]
       parameters:
@@ -930,7 +924,7 @@ paths:
             type: string
       responses:
         "200": # status code
-          description: A JSON array of user names
+          description: Getting one page
           content:
             application/json:
               schema:
@@ -940,7 +934,7 @@ paths:
       tags:
         - Page
     delete:
-      summary: pageni o'chirish.
+      summary: Deleting page by id
       security:
         - BearerAuth: [ ]
       parameters:
@@ -951,7 +945,7 @@ paths:
           required: true
       responses:
         "200": # status code
-          description: A JSON array of user names
+          description: Deleting page by id
           content:
             application/json:
               schema:
@@ -988,6 +982,15 @@ paths:
       tags:
         - Page
 
+
+
+
+
+
+
+
+
+
 ##Degree
   /api/degree:
     get:
@@ -1023,7 +1026,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/degree"
+                  $ref: "#/components/schemas/degreeGet"
       tags:
         - Degree
 
@@ -1118,6 +1121,11 @@ paths:
                   $ref: "#/components/schemas/deleteModel"
         tags:
           - Degree
+
+
+
+
+
 
 ##Direction
 
@@ -1370,6 +1378,12 @@ paths:
                   tags:
                     - Faculty
 
+
+
+
+
+
+
    ##Format
   /api/format:
                 get:
@@ -1494,6 +1508,12 @@ paths:
                       - Format
 
 
+
+
+
+
+
+
     ##Level
   /api/level:
                 get:
@@ -1614,6 +1634,12 @@ paths:
                               $ref: "#/components/schemas/deleteModel"
                     tags:
                       - Level
+
+
+
+
+
+
   ##Partner
   /api/partner:
               get:
@@ -1733,6 +1759,15 @@ paths:
                             $ref: "#/components/schemas/deleteModel"
                   tags:
                     - Partner
+
+
+
+
+
+
+
+
+
 
 
   ##Topic
@@ -1979,12 +2014,25 @@ paths:
           - EventsCategory
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
   ##Events
   /api/events:
     get:
       summary: Get all events
       security:
-        - BearerAuth: [ ]
+        - BearerAuth: []
       parameters:
         - in: query
           name: limit
@@ -2101,6 +2149,12 @@ paths:
                 $ref: "#/components/schemas/deleteModel"
       tags:
         - Events
+
+
+
+
+
+
 
 
   ##SpecialistsInfo
@@ -2297,12 +2351,11 @@ components:
         login:
           type: string
           example: johndoe
-        userId?:
+        telegramId?:
           type: string
         phone:
           type: string
           example: "+1234567890"
-
         password:
           type: string
           example: "strongPassword123"
@@ -2457,6 +2510,32 @@ components:
               type: string
             language:
               type: string
+
+    newsGet:
+      type: object
+      properties:
+        data:
+          type: array
+          schema:
+            img:
+              type: array
+            slug:
+              type: string
+            category:
+              type: string
+            _id:
+              type: string
+            translates:
+              type: array
+              properties:
+                title:
+                  type: string
+                text:
+                  type: string
+                description:
+                  type: string
+                language:
+                  type: string
     newsUp:
       type: object
       properties:
@@ -2533,6 +2612,19 @@ components:
               type: string
             language:
               type: string
+    degreeGet:
+      type: object
+      properties:
+          _id:
+            type: string
+          translate:
+              type: object
+              properties:
+                name:
+                  type: string
+                language:
+                  type: string
+
     degreePut:
       type: object
       properties:
@@ -2542,17 +2634,6 @@ components:
             name:
               type: string
             language:
-              type: string
-
-    degreeDeleteOne:
-      type: object
-      properties:
-        modelId?:
-          type: string | null
-        translate:
-          type: object
-          properties:
-            id:
               type: string
 
     ## Directions
